--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -8,6 +8,7 @@ layout: default
       <div class="cover-author-image">
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
       </div>
+      <a href = "https://aashutoshtrivedi.github.io">Aashutosh Trivedi</a>
       <div class="author-name">{{site.author}}</div>
       <p>{{site.about-author}}</p>
     </div>
